--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-
+body{margin: 0;
+  padding: 0;}
 .navbar {
   background-color: rgba(0, 0, 0, 0.951);
-  padding: 10px 10px; 
   display: flex;
   align-items: center; 
   justify-content: space-between;
@@ -15,7 +15,7 @@
   padding-left: 20px;
 }
 .offer{
-  height:40px;
+  height:20px;
   padding: 10px 10px;
   background-color: #F6BB10;
   font-size: 14px;
@@ -29,8 +29,9 @@
   color:black ;
 }
 .logoImage{
-width: 50px;
-  margin-left: 150px;
+width: 200px;
+height: 50px;
+  margin-left: 100px;
   margin-right: 100px;
   margin-top: 0;
 
